Multiple GCC 10 build failures in ANGLE https://bugs.webkit.org/show_bug.cgi?id=207365

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-02-12
Reviewed by Carlos Alberto Lopez Perez.

* changes.diff: Updated.
* include/platform/Platform.h: Add missing #include to get size_t.
* src/common/PackedEnums.h: Remove problematic const_casts.

Canonical link: https://commits.webkit.org/220641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256491 268f45cc-cd09-0410-ab3c-d52691b4dbfc